--- a/templates/login.html
+++ b/templates/login.html
@@ -44,46 +44,10 @@
                         </div>
                     </form>
                     
-                    <!-- Social Login Divider -->
-                    <div class="text-center my-4">
-                        <span class="bg-white px-3 text-muted">or continue with</span>
-                    </div>
-                    
-                    <!-- Social Login Buttons -->
-                    <div class="row g-2">
-                        <div class="col-6">
-                            <a href="{{ url_for('oauth_login', provider='google') }}" class="btn btn-outline-danger w-100">
-                                <i class="bi bi-google me-2"></i>Google
-                            </a>
-                        </div>
-                        <div class="col-6">
-                            <a href="{{ url_for('oauth_login', provider='facebook') }}" class="btn btn-outline-primary w-100">
-                                <i class="bi bi-facebook me-2"></i>Facebook
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row g-2 mt-2">
-                        <div class="col-6">
-                            <a href="{{ url_for('oauth_login', provider='github') }}" class="btn btn-outline-dark w-100">
-                                <i class="bi bi-github me-2"></i>GitHub
-                            </a>
-                        </div>
-                        <div class="col-6">
-                            <a href="{{ url_for('oauth_login', provider='microsoft') }}" class="btn btn-outline-secondary w-100">
-                                <i class="bi bi-microsoft me-2"></i>Microsoft
-                            </a>
-                        </div>
-                    </div>
                     
                                                     <div class="text-center mt-4">
                                     <p class="text-muted mb-0">Don't have an account?</p>
                                     <a href="{{ url_for('signup') }}" class="text-decoration-none">Sign up here</a>
-                                    <hr class="my-3">
-                                    <small class="text-muted">
-                                        Demo Credentials:<br>
-                                        <strong>Admin:</strong> admin@zuct.edu.zm / admin123<br>
-                                        <strong>User:</strong> user@zuct.edu.zm / user123
-                                    </small>
                                 </div>
                 </div>
             </div>
@@ -123,4 +87,7 @@
     padding: 12px;
 }
 </style>
+{% endblock %}
+
+{% block extra_js %}
 {% endblock %}
